Primera Versión de la nueva Introducción

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,81 +1,15 @@
 \chapter*{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
 
-Cuando un líquido contenido en un recipiente es sometido a vibraciones verticales, a menudo se observa un patrón de ondas estacionarias no-lineales sobre la superficie del mismo. Estas ondas, conocidas como \textit{ondas de Faraday} o \textit{inestabilidades de Faraday} \cite{Faraday1831a, benjamin1954stability} se ven paramétricamente excitadas en el momento en el que las vibraciones verticales superan una cierta frecuencia crítica o aceleración crítica. Michael Faraday \cite{Faraday1831a} se percató de que estas ondas en la superficie del líquido son sub-armónicos de la frecuencia de oscilación al que es sometido el recipiente, mas exactamente que la superficie oscilaba a la mitad de la frecuencia de excitación. Experimentos recientes, en donde se emplea una y hasta dos frecuencias de forzamiento han puesto de manifiesto que no sólo se pueden formar patrones espacialmente regulares de lineas paralelas, cuadrados, círculos y hexágonos, sino también simetrías mucho más complejas, lo que hace que la comprensión de estos tipos de patrones resulten ser un reto \cite{douady1990experimental, edwards1994patterns, binks1997nonlinear, kudrolli1996patterns, arbell2000temporally, arbell2000two, porter2002broken, westra2003patterns}. El umbral para el cual se hace presente la inestabilidad y los patrones observados dependen de la viscosidad y la tensión superficial del líquido, la aceleración de la oscilación, la forma y el tamaño del contenedor..\medskip \bigskip
-
-La descripción matemática del problema está dada por las ecuaciones de Navier-Stokes en un dominio con una superficie libre; y la debido a la frecuencia de excitación este se convierte en un problema no autónomo. En matemáticas, un sistema no autónomo es un sistema de ecuaciones diferenciales ordinarias que depende explícitamente de la variable independiente. En este caso, la variable no autónoma resulta ser el forzamiento externo que influye en los parámetros de fluido cuando el comportamiento oscilante ha iniciado. Por otro lado, el mecanismo de selección de parámetros ha sido investigado empleando herramientas de simetría y teoría de bifurcaciones \cite{silber2000two, rucklidge2003secondary, skeldon2007pattern}. Una teoría lineal de las inestabilidades de Faraday ha sido desarrollada por Benjamin y Ursell \cite{benjamin1954stability}, quienes plantearon que el problema se puede reducir a un conjunto de osciladores de Mathieu. Sin embargo, este análisis se basa en la aproximación de flujo potencial, que se limita a líquidos no viscosos. En el caso de líquidos viscosos el análisis requeriría de la adición teórica de un término de amortiguamiento viscoso. La inclusión de este término se ha utilizado recurrentemente en una serie de análisis lineales \cite{muller1993periodic, kumar1996linear, kumar1994parametric, perlin2000capillary}. No obstante, esta aproximación ignora las capas límites viscosas a lo largo de las paredes del recipiente y por debajo de la superficie, donde se produce disipación adicional. Estos efectos generalmente son tratados mediante la adición de un amortiguamiento heurístico en la ecuación de Mathieu \cite{Landau1987}, el cual es proporcional a la viscosidad cinemática.\medskip \bigskip
-
-Los esfuerzos por comprender las ondas de Faraday, han dado lugar a la aparición de simulaciones numéricas, que implican la solución de las ecuaciones de Navier-Stokes acopladas a un método de seguimiento frontal para el tratamiento de la superficie libre \cite{perinet2009numerical, perinet2012alternating}. En todos estos cálculos se asume que la superficie del líquido es perfectamente plana en el borde de las paredes laterales, donde no hay deslizamiento y se aplican condiciones de borde periódicas \cite{kahouadji2015numerical}. En general, debido a que el sistema es vibrado, la aceleración efectiva de la gravedad varía, ocasionando que la longitud del menisco se alterne de grande a pequeña y viceversa. Con el fin de garantizar la conservación de la masa del fluido, las ondas de superficie son emitidas desde las paredes laterales del recipiente a la frecuencia de excitación. No obstante, estas simulaciones numéricas no tienen en cuenta el realismo de los experimentos, donde la dinámica del menisco es importante \cite{nguyem2011effect}. Por otra parte, la disipación viscosa es la principal causante del amortiguamiento de estas ondas capilares a lo largo de la superficie del fluido. \medskip \bigskip
- 
-En recipientes pequeños existe un fuerte acoplamiento entre las ondas capilares generadas por el menisco y las ondas de Faraday, donde las ondas capilares se extienden por toda la superficie del líquido. Observaciones experimentales recientes en recipientes cilíndricos de pequeños diámetros indican que se requiere un incremento del umbral de aceleración para lograr generar ondas de Faraday \cite{nguyem2011effect}. En analogía con los resultados experimentales para recipientes pequeños individuales a la escala de centímetros, también se ha observado la formación de patrones regulares sobre una red cuadrada de celdas \cite{Delon2010b}. Luego de un breve estado transitorio, justo por encima del umbral de Faraday, las celdas adyacentes se sincronizan para formar retículos regulares de forma cuadrada sobre toda la red, cuya orientación con respecto a la rejilla depende de una gama de frecuencias de excitación. Los experimentos de Delon y colaboradores \cite{Delon2010b} proporcionan una visión cualitativa de las ondas de superficie forzadas paramétricamente. \medskip \bigskip
-
-Las ondas de Faraday representan un sistema experimental atractivo y oportuno debido a que poseen numerosos parámetros de control. Además, representan un ejemplo canónico de como se forman patrones espacio-temporales a través de una inestabilidad paramétrica. Las fluctuaciones en la frecuencia y amplitud de la fuerza de forzamiento pueden propiciar la transición de un patrón existente bien definido a un estado mixto con una fracción de caos espacio-temporal \cite{kudrolli1996localized, ciliberto1985chaotic}. La escala de tiempo para la formación de patrones es típicamente mucho más rápida y fácil de obtener que para otros sistemas canónicos, tales como la convección de Rayleigh-Bénard \cite{ behringer1982heat, manneville2006rayleigh} o la inestabilidad de Taylor-Couette \cite{czarny2007time, shaqfeh1992effects}. Por consiguiente, el estudio de las ondas de Faraday constituye una manera ventajosa para explorar fenómenos no-lineales más complejos por medio de un dispositivo experimental simple. \medskip \bigskip
-
-En este trabajo se propone estudiar los patrones de ondas de Faraday que surgen cuando se somete a vibraciones verticales un liquido confinado a un contendor y en un reticulado parcialmente lleno compuesto de pequeñas celdas con diferentes geometrías y su dependencia con la frecuencia, la amplitud de las vibraciones y las geometrías de las celdas. Esto con el objetivo de caracterizar el comportamiento del fluido sometido a vibraciones para su aplicacion en la vaporización ultrazonica de gotas liquidas. Con esta finalidad se propone: 1) Variar los rangos de frecuencias $F$ y amplitudes $A$ de la fuerza excitadora; 2) Realizar un barrido más fino del espacio de parámetros ($A$, $F$) para determinar y definir la posible existencia de regiones que separen la formación sincronizada de patrones regulares; 3) Proporcionar un marco cuantitativo de las ondas paramétricamente excitadas en la superficie del fluido para determinar su espectro de frecuencias; y 4) Realizar un análisis detallado utilizando la relación de dispersión de las ondas de Faraday para el forzamiento y la disipación. \medskip \bigskip
-
-
-\section*{Antecedentes} \label{S:2}
-\addcontentsline{toc}{section}{Antecedentes}
-
-En el año 1831, M. Faraday, motivado por los trabajos realizados por Oersted, Wheatstone y Weber, reportó en su diario, que al someter a vibraciones verticales a la superficie de un fluido, éste presenta ondas superficiales que dan lugar a diversos patrones \cite{faraday1936faraday}. Faraday notó que estas ondas superficiales presentan una frecuencia de oscilación, la cual es proporcional a un medio de la frecuencia de excitación \cite{Faraday1831a}. Casi cuatro décadas después del descubrimiento de Faraday, Mathiessen cuestionó la afirmación realizada por Faraday acerca de la respuesta sub-armónica del sistema a las vibraciones verticales \cite{Matthiessen1868}. Tal controversia motivó a Lord Rayleigh a realizar sus propias observaciones\cite{LordRayleigh1883}, reproduciendo así el experimento, y pudiendo corroborar los resultados obtenidos por Faraday. \medskip \bigskip
-
-La naturaleza sub-armónica de la inestabilidad fue finalmente verificada de forma teórica, con el uso de las ecuaciones de la hidrodinámica, por Benjamin y Ursell \cite{benjamin1954stability}, quienes desarrollaron una teoría lineal, confirmando el punto de vista de Faraday y Rayleigh \cite{Faraday1831a, LordRayleigh1883}. El estudio teórico mas extenso del problema de estabilidad ha requerido del uso de simulaciones numéricas, lo que dificulta muchas veces la interpretación y comprensión física. Una expresión analítica para la excitación de los modos sub-armónicos de las ondas de Faraday la obtuvo Müller \textit{et al}. \cite{muller1997analytic}, la cual es aplicable a un amplio rango de frecuencias, abarcando tanto ondas de gravedad en aguas someras como ondas capilares en aguas profundas. Si bien este análisis es aplicable en el límite de una disipación débil, un tratamiento analítico en el límite opuesto lo llevó a cabo Cerda y Tirapegui \cite{cerda1997faraday}. Por otra parte, los aspectos lineales de la inestabilidad de Faraday estudiados desde el trabajo de Benjamin y Ursell fueron revisados por Müller \cite{muller1998linear}. No fue hasta hace muy poco tiempo que las primeras simulaciones numéricas de la dinámica de las ondas de Faraday comenzaron a aparecer en la literatura \cite{takagi2015numerical, kahouadji2015numerical}, que implica la solución completa de las ecuaciones de Navier-Stokes en tres dimensiones. En particular, algunas simulaciones reproducen patrones cuadrados y hexagonales \cite{kityk2005spatiotemporal, kityk2009erratum}. \medskip \bigskip
-
-En los últimos años, se han realizado numerosos estudios experimentales sobre las ondas de Faraday \cite{residori2007two} obteniéndose una enorme cantidad de datos experimentales, lo que ha generado un particular interés teórico en el problema \cite{perinet2009numerical, perinet2012alternating}. Dependiendo de la amplitud o la frecuencia de excitación, la viscosidad del fluido y la geometría del contenedor, el fluido puede exhibir ondas estacionarias que forman patrones en su superficie \cite{arbell2000temporally, rajchenbach2011new}. Los experimentos con una y dos frecuencias de forzamiento muestran que no sólo se pueden formar patrones espacialmente regulares de líneas paralelas, cuadros, círculos y hexágonos, sino también, se pueden formar simetrías más complejas tales como cuasi-patrones, patrones de superlattice, y oscilones \cite{westra2003patterns, rajchenbach2013observation}. Por otra parte, los mecanismos de selección del patrón han sido investigados utilizando herramientas de simetría y teoría de bifurcación \cite{buescu2012bifurcation, skeldon2007pattern}, debido a que la ruptura de la simetría es una consecuencia del acoplamiento no-lineal entre las ondas de superficie. \medskip \bigskip
-
-Mientras casi todos los experimentos clásicos sobre patrones en ondas de Faraday se refieren a recipientes individuales de tamaños y formas variadas, Delon y colaboradores \cite{Delon2010b} observaron la formación de patrones regulares, en el caso en que la interfaz líquido-aire estaba dividida por un reticulado compuesto de pequeñas celdas cuadradas. Notando que luego de un estado transitorio, justo por encima del umbral de Faraday, se observa que las celdas vecinas colaboran sincronizadamente para formar un pico de líquido en sus intersecciones comunes, dando así lugar a un retículo cuadrado regular. En particular, para contenedores de pequeño tamaño, existe un fuerte acoplamiento entre las ondas capilares generadas por el menisco y las ondas de Faraday \cite{Pena-Polo2014, Pena-Polo2017}. \medskip \bigskip
-
-A pesar de los notables avances en la comprensión teórica de las ondas de Faraday \cite{miles1999faraday, mancebo2004standing}, algunas de sus propiedades fundamentales siguen siendo una interrogante; a tal punto que hasta donde se sabe, sorprendentemente la relación de dispersión de las ondas de agua paramétricamente forzadas no ha sido aún establecida de forma explícita. De hecho, esta relación de dispersión a menudo se establece, de forma incorrecta, con la de las ondas superficiales libres no forzadas, en contraste con la evidencia experimental que muestra desviaciones significativas \cite{edwards1994patterns}. Así pues, un conocimiento exacto de la relación de dispersión es de crucial importancia, verbigracia, para explorar la posibilidad de acoplamientos de multiondas y en consecuencia, predecir las simetrías de patrones en la superficie. \medskip \bigskip
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-%\begin{table} % just use this specifier if really needed.
-%    \centering
-%    \begin{threeparttable}
-%    \caption{Mirror movements according to Woods \& Teuber 2}\label{tab:WT}
-%    \begin{tabular}{l@{\hspace{5mm}} *{4}{S[table-format=1.0]} *{4}{S[table-format=2.0]} S[table-format=2.0]S[table-format=1.0]S[table-format=2.0]S[table-format=1.0]}
-%        \toprule
-%        & \multicolumn{4}{c}{CP Norway}&\multicolumn{4}{c}{CP Australia}& \multicolumn{4}{c}{TD children}\\
-%        \cmidrule{2-5}\cmidrule(lr){6-9}\cmidrule{10-13}
-%        & 1 & 2 & 3 & 4     & 1 & 2 & 3 & 4     & 1 & 2 & 3 & 4 \\
-%        \midrule
-%        W\&T score $0$ & 3 & 2 & 6 & 3 & 1  & 3  & 1  & 1  & 16 & 9 & 13 & 8 \\
-%        W\&T score $1$ & 4 & 3 & 3 & 4 & 4  & 3  & 2  & 2  & 5  & 9 & 9  & 8 \\
-%        W\&T score $2$ & 6 & 7 & 7 & 6 & 12 & 10 & 11 & 10 & 1  & 4 & 0  & 6 \\
-%        W\&T score $3$ & 2 & 5 & 1 & 2 & 1  & 2  & 3  & 3  & 0  & 0 & 0  & 0 \\
-%        W\&T score $4$ & 4 & 2 & 2 & 4 & 0  & 0  & 1  & 2  & 0  & 0 & 0  & 0 \\
-%        \bottomrule
-%    \end{tabular}
-%    \begin{tablenotes}
-%        \item[1] Mirror movements in the affected hand, while the unaffected hand is moving at normal speed. 
-%        \item[2] Mirror movements in the affected hand, while the unaffected hand is moving at fast speed. 
-%        \item[3] Mirror movements in the unaffected hand as the affected hand is moving at normal speed. 
-%        \item[4] Mirror movements in the unaffected hand as the affected hand is moving at fast speed. For TD children, the non-dominant hand corresponds to the affected hand.
-%    \end{tablenotes}
-%    \begin{tablenotes}
-%        \item fwsgrt regerdzfbfd
-%    \end{tablenotes}
-%    \end{threeparttable}
-%\end{table}
-
+Al someter a vibraciones netamente verticales a la superficie de un liquido, para un cierto rango de frecuencia y amplitudes en la superficie se presentan determinados patrones regulares, a este fenómeno se le llama \textit{Inestabilidad de Faraday}. El estudio de este tipo de inestabilidad tiene una larga e interesante historia que involucra a dos de los individuos más destacados de la ciencia moderna. A mediados del año 1831, M. Faraday (1791-1867) realizó una serie de experimentos con fluidos sometidos a vibraciones . El 19 de junio, informa en su diario la aparición de patrones cuadrados cuando una capa de fluido se pone en vibración. Trispaciones casi siempre cuadrangulares, siempre cuando están bien formadas, pero modificadas por el borde del agua o el líquido, también por el centro de movimiento '[19, §2]. Para examinar este fenómeno más de cerca, extendió el líquido en una placa horizontal, fijó la placa en el centro de una tira de vidrio o listón de soporte sostenido en los nodos y causó vibración por fricción. En particular, Faraday señaló que la frecuencia de las ondas era la mitad de la frecuencia del soporte. Medio siglo después, la respuesta subarmónica a las vibraciones puramente verticales fue cuestionada por L. Mathiessen [46], quien afirmó la sincronía del forzamiento y las ondas excitadas. Esta controversia motivó a Lord Rayleigh (1842-1919) a hacer su propio examen. En un primer experimento con una instalación como Faradays, una barra de hierro de un metro de largo se colocó en vibraciones mantenidas electromagnéticamente. Para medir las frecuencias, que eran demasiado altas (20 Hz) para ser reconocidas a simple vista, construyó un aparato que consiste en un disco de papel giratorio con uno, dos o cuatro agujeros. Observando la cantidad de imágenes de la barra y las olas, confirmó la declaración de Faradays. Para resolver la cuestión más allá de cualquier duda, proporcionó al bar pesas cerca del medio para ajustar la frecuencia de resonancia. Continúa: 'El tablón se puso en vibración mediante impulsos adecuadamente sincronizados con la mano, y los pesos se ajustaron hasta que el período correspondió a un modo de vibración libre del depósito de mercurio. Cuando se completa el ajuste, una vibración muy pequeña del tablón arroja el mercurio a una gran conmoción ... '[57]. Las frecuencias ahora se podían determinar directamente mediante inspección y, una vez más, el resultado apoyaba a Faraday.
+La naturaleza subarmónica de la inestabilidad fue finalmente verificada teóricamente directamente de la hidrodinámica por Benjamin y Ursell [4], quienes en 1954 desarrollaron la teoría lineal. Ignorando la viscosidad, las ecuaciones fluidas ideales se expandieron en modos normales. Las amplitudes de los modos normales se desacoplan y cumplen como una primera aproximación de la ecuación de Mathieu, que es una ecuación diferencial ordinaria no autónoma de segundo orden. Benjamin y Ursell pudieron utilizar las propiedades de estabilidad conocidas de la ecuación de Mathieu para confirmar el punto de vista de Faraday y Rayleigh.
+La inestabilidad encontrada en la ecuación de Mathieu se llama inestabilidad paramétrica, y es conocida por sistemas físicos tan diversos como osciladores electrónicos, ondas de Langmuir en plasma y yo-yos. El prototipo es el péndulo excitado paramétricamente. Si el pivote del péndulo oscila verticalmente, el péndulo comenzará a oscilar horizontalmente con la mitad de la frecuencia para algunas amplitudes y frecuencias. En este ejemplo, así como en el experimento de Faraday, la aceleración gravitacional efectiva es el parámetro externo impulsado. La ecuación de Mathieu lleva el nombre del matemático francés E. L. Mathieu (1825-1890). En su trabajo original de 1868 aparece al resolver la ecuación de onda bidimensional para el movimiento de una membrana elíptica.
+Es interesante notar que Lord Rayleigh ya reconoció el experimento de Faraday como una inestabilidad paramétrica [56]. En su trabajo de 1883, en realidad analizó la ecuación de Mathieu en presencia de amortiguamiento y encontró una condición necesaria para la respuesta subarmónica. Más tarde [58] elaboró sobre el tema inspirado en el trabajo del físico estadounidense G. W. Hill (1838-1914) de 1877 sobre una generalización de la ecuación de Mathieu relativa al movimiento de la luna bajo la influencia del sol y la tierra.
+En los años sesenta y setenta se realizó un trabajo para ampliar el análisis de Benjamin y Ursell a amplitudes finitas mediante la incorporación de no linealidades débiles. Sin embargo, con el creciente interés de la dinámica no lineal y el caos temporal en la última década, el experimento de Faraday ha ganado un interés más amplio. En 1981 Keolian et al. [37] observó un estado caótico en una célula anular fuertemente impulsada. Dos años después de que Gollub y Meyer [23] estudiaran la transición al caos de un modo único en una celda circular. Ciliberto y Gollub [7, 8] mostraron cómo la competencia entre dos modos superpuestos puede conducir al caos. Además, Simonelli y Gollub [62] estudiaron las interacciones de dos modos casi degenerados por simetría.
+Los estudios experimentales fueron acompañados por esfuerzos teóricos [49, 31, 47, 26, 2, 21, 66]. El objetivo de estos estudios es extraer ecuaciones de amplitud para un solo modo o unos pocos modos resonantes de la hidrodinámica. Para una revisión ver Miles y Henderson [50].
+La investigación mencionada anteriormente aborda el límite de las relaciones de aspecto bajas, es decir, cuando la longitud de onda es comparable al tamaño del sistema. En este caso, solo unos pocos modos se excitan simultáneamente y la dinámica es de baja dimensión. Gran parte del interés actual en el experimento de Faraday se debe a sus posibilidades como sistema con muchos grados de libertad. Para este propósito, el experimento de Faraday tiene dos ventajas principales; la relación de aspecto puede variarse simplemente variando la frecuencia, y la dinámica puede investigarse visualmente.
+Un resultado sorprendente para las relaciones de aspecto altas es la observación de que el relieve de la superficie puede tomar la forma de patrones ordenados que se asemejan mucho a los cristales bidimensionales. Sin embargo, la verdadera sorpresa es que estos patrones no se limitan a las celdas de una geometría particular. Para relaciones de aspecto altas, los límites se vuelven menos importantes y la geometría es la del plano infinito. Esto ya lo notó Faraday. Al estudiar el patrón cuadrado observa: `Evidentemente, no es causado por ondas interferentes, aunque puede resolverse en ellas. ... Además, por irregulares que sean los bordes, la disposición puede hacerse cuadrangular '[19, §58]. Ezerskii et al. (1986) informaron recientemente un patrón cuadrado (1986) en una geometría circular. [14, 15]. En el mismo año, Aleksandrov et al. [1] encontró un patrón hexagonal para las amplitudes de la unidad debajo de aquellas para las cuales observaron el patrón cuadrado. La selección de patrones para las relaciones de aspecto intermedias ha sido investigada por Douady y Fauve [10, 11]. Notamos que se pueden introducir múltiples números de onda críticos a través de un forzado con más de un componente de frecuencia. Esto favorece el sistema Faraday de otros sistemas de formación de patrones como la convección de Rayleigh-Benard y permite la ingeniería de patrones [13].
+Varios autores han estudiado experimentalmente el desglose del patrón cuadrado a un estado desordenado a medida que aumenta la amplitud de la unidad. Tuffilaro y col. [65] estudió el
+longitud de correlación en función de la amplitud de la unidad y encontró un punto de transición bien definido. Por encima de la transición se encuentra el caos espacio-temporal o la turbulencia débil, es decir, se pierde la coherencia espacial pero la dinámica sigue dominada por una escala de longitud única. Ezerskii y col. [15, 16, 17] encontraron que la transición está mediada por el inicio de modulaciones transversales de longitud de onda larga. Las propiedades de transporte de las turbulentas olas de Faraday se han estudiado recientemente [59, 48]. Estos aspectos se revisan en las Refs. [22, 24] y [25].
+Varios trabajadores han realizado intentos teóricos para comprender la formación del patrón y la transición al caos espacio-temporal. El más ambicioso parece ser el de Milner [51], que aplica el método de escalas múltiples para derivar las ecuaciones de amplitud. Sobre la base de las consideraciones energéticas, concluye que el estado preferido es el patrón cuadrado. Esto está en contradicción con la observación antes mencionada de un patrón hexagonal [1], y con los resultados experimentales reportados en la presente tesis. La teoría de Levin et al. [42] predice patrones hexagonales y cuadrados, pero sus métodos y presunciones parecen muy burdos. Ezerskii, Rabinovich y col. [15, 16, 54, 55] aplican principalmente su versión de las ecuaciones de amplitud al problema del caos e intermitencia espacio-temporal.
+En esta tesis presentamos un estudio experimental del sistema de Faraday de alta relación de aspecto. Se hace hincapié en la observación de una serie de patrones cristalinos de diferente simetría. En particular, el descubrimiento de un estado cuasicristalino es de interés, ya que, según nuestro conocimiento, es el primer patrón de este tipo que se encuentra en un sistema hidrodinámico. El resto de la parte I de la tesis se organiza de la siguiente manera. En sec. 2 se desarrollan la hidrodinámica y la teoría lineal. La sección 3 ofrece una breve reseña histórica de los cuasicristales. En sec. 4 describimos la configuración experimental, y en la Sec. 5 se analiza el sistema óptico. En sec. 6 informamos nuestros resultados sobre la relación de dispersión, las tasas de amortiguamiento y la amplitud crítica, mientras que la Sec. 7 está dedicado a los patrones cristalinos y al diagrama de fases. La sección 8 contiene una discusión de la teoría no lineal. Cerramos esta parte de la tesis en la Sec. 9 con la conclusión.
