--- a/thesisphd.tex
+++ b/thesisphd.tex
@@ -30,7 +30,7 @@
 %\usepackage{pst-all}
 %\usepackage{pst-node}
 %\usepackage{pstricks-add}
-\usepackage{ipn-cover}
+\usepackage{ipn-cover}					% Formato de portada
 \usepackage[x11names]{xcolor}
 \usepackage{lineno}
 
@@ -99,8 +99,8 @@
 \degree{F\'ISICO}
 \supervisor{Dr. Ignacio Carvajal \\ Dr. Leonardo Sigalotti\\}
 \cityandyear{Ciudad de M\'exico, Agosto de 2019}
-\logouni{logo-ipn.png}
-\logofac{logo-esime.png}
+\logouni{figuras/logo-ipn.png}
+\logofac{figuras/logo-esime.png}
 
 \begin{document}
 
