1er modificación: Rayleigh

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,7 +1,7 @@
 \chapter*{Introducción}
 \addcontentsline{toc}{chapter}{Introducción}
 
-Al someter a vibraciones netamente verticales a la superficie de un liquido, para un cierto rango de frecuencia y amplitudes en la superficie se presentan determinados patrones regulares, a este fenómeno se le llama \textit{Inestabilidad de Faraday}. El estudio de este tipo de inestabilidad tiene una larga e interesante historia que involucra a dos de los individuos más destacados de la ciencia moderna. A mediados del año 1831, M. Faraday (1791-1867) realizó una serie de experimentos con fluidos sometidos a vibraciones . El 19 de junio, informa en su diario la aparición de patrones cuadrados cuando una capa de fluido se pone en vibración. Trispaciones casi siempre cuadrangulares, siempre cuando están bien formadas, pero modificadas por el borde del agua o el líquido, también por el centro de movimiento '[19, §2]. Para examinar este fenómeno más de cerca, extendió el líquido en una placa horizontal, fijó la placa en el centro de una tira de vidrio o listón de soporte sostenido en los nodos y causó vibración por fricción. En particular, Faraday señaló que la frecuencia de las ondas era la mitad de la frecuencia del soporte. Medio siglo después, la respuesta subarmónica a las vibraciones puramente verticales fue cuestionada por L. Mathiessen [46], quien afirmó la sincronía del forzamiento y las ondas excitadas. Esta controversia motivó a Lord Rayleigh (1842-1919) a hacer su propio examen. En un primer experimento con una instalación como Faradays, una barra de hierro de un metro de largo se colocó en vibraciones mantenidas electromagnéticamente. Para medir las frecuencias, que eran demasiado altas (20 Hz) para ser reconocidas a simple vista, construyó un aparato que consiste en un disco de papel giratorio con uno, dos o cuatro agujeros. Observando la cantidad de imágenes de la barra y las olas, confirmó la declaración de Faradays. Para resolver la cuestión más allá de cualquier duda, proporcionó al bar pesas cerca del medio para ajustar la frecuencia de resonancia. Continúa: 'El tablón se puso en vibración mediante impulsos adecuadamente sincronizados con la mano, y los pesos se ajustaron hasta que el período correspondió a un modo de vibración libre del depósito de mercurio. Cuando se completa el ajuste, una vibración muy pequeña del tablón arroja el mercurio a una gran conmoción ... '[57]. Las frecuencias ahora se podían determinar directamente mediante inspección y, una vez más, el resultado apoyaba a Faraday.
+Al someter a vibraciones netamente verticales a la superficie de un liquido, para un cierto rango de frecuencia y amplitudes en la superficie se presentan determinados patrones regulares, a este fenómeno se le llama \textit{Inestabilidad de Faraday}. El estudio de este tipo de inestabilidad tiene una larga e interesante historia que involucra a dos de los individuos más destacados de la ciencia moderna. A mediados del año 1831, M. Faraday (1791-1867) realizó una serie de experimentos con fluidos sometidos a vibraciones verticales \cite{Faraday1831}. Faraday, reporta en su diario que al vibrar un fluido se presentan una serie de patrones cuadrados ``Crispaciones casi siempre cuadrangulares, siempre cuando están bien formadas, pero modificadas por el borde del agua o el líquido, también por el centro de movimiento'' \cite{Faraday2008}. En particular, Faraday señaló que la frecuencia de las ondas de la superficie del liquido era la mitad de la frecuencia de excitación. Cuatro Medio siglo después, la respuesta subarmónica a las vibraciones puramente verticales fue cuestionada por L. Mathiessen \cite{Matthiessen1868}, afirmando que existia una sincronia entre el forzamiento y las ondas de la superficie. Esta controversia motivó a Lord Rayleigh (1842-1919) a hacer su propio análisis. En un primer experimento con una instalación como Faraday, una barra de hierro de un metro de largo se colocó en vibraciones mantenidas electromagnéticamente. Para medir las frecuencias, que eran demasiado altas (20 Hz) para ser reconocidas a simple vista, construyó un aparato que consiste en un disco de papel giratorio con uno, dos o cuatro agujeros. Observando la cantidad de imágenes de la barra y las olas, confirmó la declaración de Faradays. Para resolver la cuestión más allá de cualquier duda, proporcionó al bar pesas cerca del medio para ajustar la frecuencia de resonancia. Continúa: 'El tablón se puso en vibración mediante impulsos adecuadamente sincronizados con la mano, y los pesos se ajustaron hasta que el período correspondió a un modo de vibración libre del depósito de mercurio. Cuando se completa el ajuste, una vibración muy pequeña del tablón arroja el mercurio a una gran conmoción ... '[57]. Las frecuencias ahora se podían determinar directamente mediante inspección y, una vez más, el resultado apoyaba a Faraday.
 La naturaleza subarmónica de la inestabilidad fue finalmente verificada teóricamente directamente de la hidrodinámica por Benjamin y Ursell [4], quienes en 1954 desarrollaron la teoría lineal. Ignorando la viscosidad, las ecuaciones fluidas ideales se expandieron en modos normales. Las amplitudes de los modos normales se desacoplan y cumplen como una primera aproximación de la ecuación de Mathieu, que es una ecuación diferencial ordinaria no autónoma de segundo orden. Benjamin y Ursell pudieron utilizar las propiedades de estabilidad conocidas de la ecuación de Mathieu para confirmar el punto de vista de Faraday y Rayleigh.
 La inestabilidad encontrada en la ecuación de Mathieu se llama inestabilidad paramétrica, y es conocida por sistemas físicos tan diversos como osciladores electrónicos, ondas de Langmuir en plasma y yo-yos. El prototipo es el péndulo excitado paramétricamente. Si el pivote del péndulo oscila verticalmente, el péndulo comenzará a oscilar horizontalmente con la mitad de la frecuencia para algunas amplitudes y frecuencias. En este ejemplo, así como en el experimento de Faraday, la aceleración gravitacional efectiva es el parámetro externo impulsado. La ecuación de Mathieu lleva el nombre del matemático francés E. L. Mathieu (1825-1890). En su trabajo original de 1868 aparece al resolver la ecuación de onda bidimensional para el movimiento de una membrana elíptica.
 Es interesante notar que Lord Rayleigh ya reconoció el experimento de Faraday como una inestabilidad paramétrica [56]. En su trabajo de 1883, en realidad analizó la ecuación de Mathieu en presencia de amortiguamiento y encontró una condición necesaria para la respuesta subarmónica. Más tarde [58] elaboró sobre el tema inspirado en el trabajo del físico estadounidense G. W. Hill (1838-1914) de 1877 sobre una generalización de la ecuación de Mathieu relativa al movimiento de la luna bajo la influencia del sol y la tierra.
