--- a/thesisphd.tex
+++ b/thesisphd.tex
@@ -128,7 +128,7 @@
 
 \include{preface}
 
-\linenumbers
+%\linenumbers
 
 \mainmatter
 \include{chapter1}
@@ -151,7 +151,7 @@
 
 \bibliographystyle{plain}                         %ieeetr, abbrv, acm, alpha, apalike, ieeetr, plain, siam, unsrt
 %\bibliography{biblio}                               %The files containing all the articles and books you ever referenced. 
-\bibliography{referen}                               %The files containing all the articles and books you ever referenced. 
+\bibliography{reference}                               %The files containing all the articles and books you ever referenced. 
 %\printindex                                           %Make an index AUTOMATICALLY 
 
 \end{document}
